feat: restore NeoForge world generation